# e-commerce-recommendation

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
models/: categories_pca_model.pkl
notebooks/: 01-download-data.ipynb  01-download-images.ipynb  02-download-images.ipynb  02-preprocess_data.ipynb  03-embed-images.ipynb  03_merge_tables.ipynb  04-embed-images.ipynb  04_update_image_urls.ipynb  05_update_image_urls.ipynb  06-clean-data.ipynb  06_embed_categories.ipynb  07-embed-images.ipynb  09-create-sample-db.ipynb  09-write-to-sample-db.ipynb  embed_images.py
public/: schema.sql  schema_sample.sql
src/: embed_images.py
src/e_commerce_recommendation/: __init__.py  embed_images.py  embeddings.py  index.html  main.py  main_old.py  normal_embed_images.py  src.code-workspace
src/e_commerce_recommendation/configs/: settings.py
src/e_commerce_recommendation/utils/: embedding_utils.py  sql_query_helper.py  utils.py
