[project]
name = "e-commerce-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ravikumarchavva", email = "ravikumarchavva@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kagglehub[pandas-datasets]>=0.4.0",
    "pillow>=12.1.0",
    "polars>=1.37.1",
    "torch>=2.9.1",
    "torch-c-dlpack-ext>=0.1.5",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "vllm>=0.14.0",
]

[project.scripts]
e-commerce-recommendation = "e_commerce_recommendation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
